--- a/main.html
+++ b/main.html
@@ -11,6 +11,35 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div id="carousel" class="carousel slide container" data-ride="carousel">
+        <ol class="carousel-indicators">   
+          <a href="guest_address.html"><button id="order-now" type="button" class="btn btn-primary">Order Now</button></a>
+        </ol>      
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/Webp.net-resizeimage.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Your One Stop Market Place</h5>
+              <br>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/Webp.net-resizeimage (1).jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Your One Stop Market Place</h5>
+              <br>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/Webp.net-resizeimage (2).jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Your One Stop Market Place</h5>
+              <br>
+            </div>
+          </div>
+        </div>       
+      </div>
+   
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
